<resources>
    <string name="app_name" translatable="false">Laundry</string>

    <string-array name="languages">
        <item>Indonesia</item>
        <item>English</item>
    </string-array>

    <string-array name="language_values">
        <item>id</item>
        <item>en</item>
    </string-array>
    <string name="card_pelanggan_id" translatable="false">ID_pelanggan</string>
    <string name="card_akun_id" translatable="false">ID_akun</string>
    <string name="card_akun" translatable="false">akun</string>
    <string name="card_pegawai_id" translatable="false">ID_pegawai</string>
    <string name="card_pegawai" translatable="false">Nama Pegawai</string>
    <string name="card_pegawai_Alamat" translatable="false">Alamat_pegawai</string>
    <string name="card_pegawai_noHP" translatable="false">No Hp</string>
    <string name="card_pegawai_data" translatable="false">Data Pegawai</string>
    <string name="card_pegawai_cabang">cabang</string>
    <string name="button_simpan">Simpan</string>
    <string name="button_lihat">Lihat</string>
    <string name="card_pelanggan_nama">Nama Pelanggan</string>
    <string name="card_pelanggan_alamat">Alamat</string>
    <string name="card_pelanggan_Hp">No Hp</string>
    <string name="card_pelanggan_cabang">Nama Cabang</string>
    <string name="card_pelanggan_tambah">Tambah Pelanggan</string>
    <string name="card_pelanggan_data">Data Pelanggan</string>
    <string name="card_pelanggan_terdaftar">Terdaftar</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="card_layanan_nama">Nama Layanan</string>
    <string name="card_layanan_harga">Harga</string>
    <string name="card_layanan_cabang">Cabang</string>
    <string name="activity_tambah_pegawai">Tambah Pegawai</string>


</resources>