<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        android:paddingStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tvprofil1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFirst"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/card_layanan_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_layanan_nama"
                    android:textSize="20dp"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_layanan_harga"
                    android:textSize="15dp"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_layanan_cabang"
                    android:textSize="15dp"
                    android:layout_marginEnd="10dp" />




            </LinearLayout>
            </LinearLayout>
    </androidx.cardview.widget.CardView>


    </LinearLayout>

    </androidx.cardview.widget.CardView>
